--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
     
     <body>
         <!-- Add a title and edit the opening of your story. -->
-        <div class="title"> Put title of your story </div>
+        <div class="title"> Lost in the Forest </div>
         <div class="story-opening">
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
-            <h1>Put opening message of your story</h1>
+            <img src="download (3).jfif">
+            <h1>You are lost in a forest and don't know what to do.</h1>
         </div>
 
         <!-- Change the text of the buttons to the options relevant to your story. -->
         <div class="buttons">
-            <button class="option-one">Option 1</button>
-            <button class="option-two">Option 2</button>
+            <button class="option-one">Go Left</button>
+            <button class="option-two">Go Right</button>
         </div>
-
         <!-- Put the part of the story the user will see if they picked option one. -->
-        <div class="option-one-screen">
-            <h1>Put the second part of your story based on if they chose option 1</h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
-        </div>
 
         <!-- Put the part of the story the user will see if they picked option two. -->
         <div class="option-two-screen">
