--- a/optionone.html
+++ b/optionone.html
@@ -4,27 +4,11 @@
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
-        <div class="option-one-screen">
-            <style>
-                body {
-                    background: url('download (2).jfif') no-repeat center center fixed;
-                    background-size: cover;
-                    background-attachment: fixed;
-                    image-rendering: auto;
-                    margin: 0;
-                    padding: 0;
-                }
-                .option-one-screen {
-                    background: none;
-                    box-shadow: none;
-                    border: none;
-                }
-            </style>
-            <h1 style="color: white; text-shadow: 2px 2px 4px #000;">You go left and see some animal tracks on the ground.</h1>
-            <div class="button-options">
-                <button id="option1">Follow the tracks</button>
-                <button id="option2">Keep walking left</button>
-            </div>
+        <h1 style="color: white; text-shadow: 2px 2px 4px #000;">You go left and see some animal tracks on the ground.</h1>
+        <div class="button-options">
+            <button class="track">Follow the tracks</button>
+            <button class="keepLeft">Keep walking left</button>
         </div>
+    </div>
     </body>
 </html>
