--- a/track.html
+++ b/track.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style2 copy.css">
     </head>
     <body>
         <div class="option-one-screen">
             <style>
                 body {
-                    background: url('download (1).jfif') no-repeat center center fixed;
+                    background: url('download (3).jfif') no-repeat center center fixed;
                     background-size: cover;
                     background-attachment: fixed;
                     image-rendering: auto;
@@ -20,10 +20,10 @@
                     border: none;
                 }
             </style>
-            <h1 style="color: white; text-shadow: 2px 2px 4px #000;">You go right and see a cabin in the distance.</h1>
+            <h1 style="color: white; text-shadow: 2px 2px 4px #000;">You go left and see some animal tracks on the ground.</h1>
             <div class="button-options">
-                <button id="cabin">Go inside</button>
-                <button id="keepRight">Keep walking right</button>
+                <button id="option1">Follow the tracks</button>
+                <button id="option2">Keep walking left</button>
             </div>
         </div>
     </body>
