--- a/index.html
+++ b/index.html
@@ -15,28 +15,45 @@
         </div>
 
         <!-- Change the text of the buttons to the options relevant to your story. -->
+        <!-- Put the part of the story the user will see if they picked option one. -->
+        <div class="option-one-screen">
+            <h1>You go left and see some animal tracks on the floor.</h1>
+            <img src="download (2).jfif">
+        </div>
+        <!-- Put the part of the story the user will see if they picked option two. -->
+        <div class="option-two-screen">
+            <h1>You have escaped the forest! </h1>
+            <img src="1920.jpg">
+        </div>
+        <!-- Put the part of the story the user will see if they picked option three. -->
+        <div class="option-three-screen">
+            <h1>You follow the tracks and discover a hidden cabin in the woods.</h1>
+            <img src="download (5).jfif">
+        </div>
         <div class="buttons">
             <button class="option-one">Go Left</button>
             <button class="option-two">Go Right</button>
+            <button class="option-three">Follow the tracks</button>
+            <button class="option-four">Continue Left</button>
+            <button class="option-five">Go inside</button>
+            <button class="option-six">Continue Right</button>
         </div>
-        <!-- Put the part of the story the user will see if they picked option one. -->
-
-        <!-- Put the part of the story the user will see if they picked option two. -->
-        <div class="option-two-screen">
-            <h1>Put the second part of your story based on if they chose option 2 </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
-        </div>
-
         <!--Put the end of the story if the user chose option 1.-->
         <div class="option-one-end">
-            <h1>Put final part of your story based on if they chosen option 1 at the beginning </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
+            <h1>You are now trapped in the cabin. Restart?</h1>
+            <img src="download (5).jfif">
         </div>
 
         <!-- Put the end of the story if the user chose option 2.-->
         <div class="option-two-end">
-            <h1>Put final part of your story based on if they chosen option 2 at the beginning </h1>
-            <img src="https://cdn.glitch.global/9d066a26-dbcb-4aa3-b1af-3cd59e251b0c/placeholder.jpeg?v=1657576139439">
+            <h1>You are even more lost. Restart? </h1>
+            <img src="download (2).jfif">
+        </div>
+
+        
+
+        <div class="restart">
+            <button class="restart-button">Restart</button>
         </div>
     </body>
 </html>
